--- a/api/PurestAdmin.Api.Host/appsettings.Development.json
+++ b/api/PurestAdmin.Api.Host/appsettings.Development.json
@@ -14,7 +14,15 @@
     "RefreshMinutes": 10 //RefreshMinutes必须小于ExpiredMinutes，如果为0则取消无感刷新
   },
   "ConnectionOptions": {
-    "DbType": "Mysql",
-    "ConnectionString": "Data Source=localhost;Database=purest;User ID=root;Password=123456;pooling=true;port=3306;sslmode=none;CharSet=utf8;AllowPublicKeyRetrieval=True;"
-  }
+    "DbType": "SqlServer",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=purest;User ID=sa;Password=123456;"
+  },
+  "KDApi": {
+    "AcctID": "64ed9963bc8ab7",
+    "UserName": "张培川",
+    "AppID": "280017_Q/5pT8vESIrV1X0HW+4qT89N5g4/wtss",
+    "AppSec": "764c356ac9004f1397177a1dae6a6269",
+    "LCID": "2052",
+    "ServerUrl": "http://172.16.5.62/k3cloud/"
+  },
 }
