--- a/api/PurestAdmin.Api.Host/appsettings.json
+++ b/api/PurestAdmin.Api.Host/appsettings.json
@@ -14,7 +14,16 @@
     "RefreshMinutes": 30 //RefreshMinutes必须小于ExpiredMinutes，如果为0则取消无感刷新
   },
   "ConnectionOptions": {
-    "DbType": "Mysql",
-    "ConnectionString": "Data Source=localhost;Database=purest;User ID=root;Password=123456;pooling=true;port=3306;sslmode=none;CharSet=utf8;AllowPublicKeyRetrieval=True;"
-  }
+    "DbType": "SqlServer",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=purest;User ID=sa;Password=123456;"
+  },
+  "KDApi": {
+    "AcctID": "20190107152622",
+    "UserName": "张培川",
+    "AppID": "279881_xebuW6FtypDZ1V8J3Y5o4+TH3s6Z6rOG",
+    "AppSec": "bf0c7f8d8f944c94ada82c2a37b28835",
+    "LCID": "2052",
+    "ServerUrl": "https://yssp-123.ik3cloud.com/k3cloud"
+  },
+
 }
