--- a/api/PurestAdmin.Zero/appsettings.json
+++ b/api/PurestAdmin.Zero/appsettings.json
@@ -3,7 +3,7 @@
     "WorkId": "1"
   },
   "ConnectionOptions": {
-    "DbType": "Mysql",
-    "ConnectionString": "Data Source=localhost;Database=purest;User ID=root;Password=123456;pooling=true;port=3306;sslmode=none;CharSet=utf8;AllowPublicKeyRetrieval=True;"
+    "DbType": "SqlServer",
+    "ConnectionString": "Data Source=localhost;Initial Catalog=purest;User ID=sa;Password=123456;"
   }
 }
